--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=green-yummy
+
+server.port = 8083
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/yourdbname
+spring.datasource.username=yummy
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+
+
+
+
+# MyBatis configuration
+mybatis.mapper-locations=classpath:mappers/*.xml
+
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
