--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -43,8 +43,6 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	//mySQL
-	implementation 'com.mysql:mysql-connector-java:8.0.33'
 	//devtools
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'	
 	
@@ -56,6 +54,8 @@ dependencies {
 	//mail
 	
 	
+	implementation 'mysql:mysql-connector-java:8.0.33'
+
 }
 
 tasks.named('test') {
