--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.mvc.view.suffix=.jsp
 # MyBatis configuration
 mybatis.mapper-locations=classpath:mappers/*.xml
 
+mybatis.type-aliases-package=com.example.demo.domain
+
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
