--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -32,14 +32,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.3.2'
     // SB Starter tomcat
     implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.3.2'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     // SB Starter mybatis
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 
 	//javax
-	implementation 'javax.servlet:javax.servlet-api:4.0.0'
+	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 	//lombok
-	compileOnly 'org.projectlombok:lombok:1.18.32'
+	implementation 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok:1.18.34'
 	annotationProcessor 'org.projectlombok:lombok:1.18.32'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
