--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=green-yummy
 
-server.port = 8083
+server.port = 8085
 
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/yourdbname
-spring.datasource.username=yummy
+spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -23,6 +23,7 @@ mybatis.type-aliases-package=com.example.demo.domain
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
