--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port = 8085
 # spring.datasource.url=jdbc:mysql://localhost:3306/yourdbname
 
 spring.datasource.url=jdbc:mysql://localhost:3306/yummy
-spring.datasource.username=yummy
+spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
