--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -25,42 +25,70 @@ repositories {
 
 dependencies {
 	// SB Starter
-	implementation 'org.springframework.boot:spring-boot-starter-web:3.3.2'
-	
-	// SB Starter jpa
- 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.2'
- 	
+    implementation 'org.springframework.boot:spring-boot-starter'
+    
+    // SB Starter web
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.2'
+    
+    // SB Starter jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.2'
+    
     // SB Starter tomcat
     implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.3.2'
-    implementation 'org.apache.tomcat.embed:tomcat-embed-el:9.0.73'
-    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.73'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-el:10.1.15'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.15'
     
     // SB Starter mybatis
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 
-	//javax
-	implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    // jakarta
+    implementation 'jakarta.servlet:jakarta.servlet-api:4.0.3'
+    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:2.0.0'
+    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
+    
+    // lombok
+    implementation 'org.projectlombok:lombok:1.18.34'
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    
+    // devtools
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    
+    // mySql
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    
+    // AOP
+    implementation 'org.springframework.boot:spring-boot-starter-aop:3.3.0'
+    runtimeOnly 'org.aspectj:aspectjweaver:1.9.22.1'
+    runtimeOnly 'org.aspectj:aspectjrt:1.9.22.1'
+    
+    // hibernate validator
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+    
+    // SLF4J
+    implementation 'org.slf4j:slf4j-api:2.0.13'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.13'
+    
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.3.1'
+    implementation 'redis.clients:jedis:5.1.3'
+    implementation 'io.lettuce:lettuce-core:6.3.2.RELEASE'
 	
-	//lombok
-	implementation 'org.projectlombok:lombok:1.18.34'
-	compileOnly 'org.projectlombok:lombok:1.18.34'
-	annotationProcessor 'org.projectlombok:lombok:1.18.34'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	
-	//devtools
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'	
-	
-	//AOP
-	//logger
-	//redis
+	/*
 	//security
-	//validation
-	//mail
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
+	implementation 'org.springframework.security:spring-security-taglibs:6.3.1'
 	
-	//mySql
-	implementation 'mysql:mysql-connector-java:8.0.33'
+	//validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.0'
+	
+	//mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail:3.3.1'
+	implementation 'com.sun.mail:jakarta.mail:2.0.1'
+	*/
 
 }
 
