--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=green-yummy
 
-server.port = 8085
+
+
+# logging.level.org.springframework=DEBUG
 
 # Database configuration
 # spring.datasource.url=jdbc:mysql://localhost:3306/yourdbname
 
+server.port = 8085
+
 spring.datasource.url=jdbc:mysql://localhost:3306/yummy
-spring.datasource.username=root
+spring.datasource.username=yummy
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
