--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=green-yummy
 server.port = 8085
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/yourdbname
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/yummy
+spring.datasource.username=yummy
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
