--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -30,25 +30,17 @@ repositories {
 }
 
 dependencies {
-	// SB Starter
     implementation 'org.springframework.boot:spring-boot-starter'
-    
-    // SB Starter web
     implementation 'org.springframework.boot:spring-boot-starter-web:3.3.2'
-    
-    // SB Starter jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.2'
     
-    // SB Starter tomcat
     implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.3.2'
     implementation 'org.apache.tomcat.embed:tomcat-embed-el:10.1.15'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.15'
     
-    // SB Starter mybatis
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 
-    // jakarta
     implementation 'jakarta.servlet:jakarta.servlet-api:4.0.3'
     implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:2.0.0'
     implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
@@ -83,9 +75,15 @@ dependencies {
     implementation 'redis.clients:jedis:5.1.3'
     implementation 'io.lettuce:lettuce-core:6.3.2.RELEASE'
 	
+	
+	/*
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
+	runtimeOnly 'com.h2database:h2'
+	*/
+	
 	/*
 	//security
-	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
+	
 	implementation 'org.springframework.security:spring-security-taglibs:6.3.1'
 	
 	//validation
