--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -76,10 +76,11 @@ dependencies {
     implementation 'io.lettuce:lettuce-core:6.3.2.RELEASE'
 	
 	
-	/*
+	
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	runtimeOnly 'com.h2database:h2'
-	*/
+	implementation 'org.springframework.security:spring-security-crypto'
 	
 	/*
 	//security
