--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -82,6 +82,11 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.security:spring-security-crypto'
 	
+	//사진 업로드
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'commons-fileupload:commons-fileupload:1.4'
+	implementation 'commons-io:commons-io:2.11.0'
+	
 	/*
 	//security
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
