--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -31,8 +31,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
-# 파일 업로드 임시 저장 위치
-spring.servlet.multipart.location=src/main/resources/static/upload
+# 파일 업로드 저장 위치
+media.filepath=src/main/resources/static/upload
 # 파일 업로드 최대 크기 (필요에 따라 조정)
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
