--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -85,7 +85,7 @@ dependencies {
 	//사진 업로드
 	
 	implementation 'commons-fileupload:commons-fileupload:1.4'
-	implementation 'commons-io:commons-io:2.11.0'\
+	implementation 'commons-io:commons-io:2.11.0'
 	
 	
 	//웹소켓
