--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-
+spring.devtools.livereload.enabled=true
 
 # MyBatis configuration
 mybatis.mapper-locations=classpath:mappers/*.xml
@@ -27,12 +27,10 @@ mybatis.type-aliases-package=com.example.demo.domain
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.open-in-view=false
 
 
-# 파일 업로드 저장 위치
 media.filepath=src/main/resources/static/upload
-# 파일 업로드 최대 크기 (필요에 따라 조정)
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
