--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -13,6 +13,7 @@ java {
 	}
 }
 
+
 tasks.withType(JavaCompile) {
     options.compilerArgs += ['-parameters']
 }
@@ -23,47 +24,38 @@ configurations {
 	}
 }
 
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	// Spring Boot Starter
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.2'
-	implementation 'org.springframework.boot:spring-boot-devtools:3.3.2'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.2'
-	
-	// Spring Boot Starter Web
-	implementation 'org.springframework.boot:spring-boot-starter-web:3.3.2'
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.2'
     
-	// Spring Boot Starter Tomcat (Embedded Container)
     implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.3.2'
-    
-	// JSP Support
-    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.15'
     implementation 'org.apache.tomcat.embed:tomcat-embed-el:10.1.15'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.15'
+    
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 
-	// Jsp file necessary api
-	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
-	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
-	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
-	
-	// MyBatis
-	//implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	//testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-
-    //Lombok
-	compileOnly 'org.projectlombok:lombok:1.18.32'
-	annotationProcessor 'org.projectlombok:lombok:1.18.32'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-	//MapStruct
-	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-	
-    // MySQL
+    implementation 'jakarta.servlet:jakarta.servlet-api:4.0.3'
+    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:2.0.0'
+    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
+    
+    // lombok
+    implementation 'org.projectlombok:lombok:1.18.34'
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    
+    // devtools
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    
+    // mySql
     implementation 'mysql:mysql-connector-java:8.0.33'
     
     // AOP
@@ -71,49 +63,53 @@ dependencies {
     runtimeOnly 'org.aspectj:aspectjweaver:1.9.22.1'
     runtimeOnly 'org.aspectj:aspectjrt:1.9.22.1'
     
-    // Hibernate Validator
+    // hibernate validator
     implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
     
     // SLF4J
     implementation 'org.slf4j:slf4j-api:2.0.13'
     testImplementation 'org.slf4j:slf4j-simple:2.0.13'
     
-    // Redis
+    // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.3.1'
     implementation 'redis.clients:jedis:5.1.3'
     implementation 'io.lettuce:lettuce-core:6.3.2.RELEASE'
+
 	
-	// Spring Boot Starter Security
+	
+	
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.security:spring-security-crypto'
 	
-	// File Upload
+	//사진 업로드
+	
 	implementation 'commons-fileupload:commons-fileupload:1.4'
 	implementation 'commons-io:commons-io:2.11.0'
 	
-
 	
 	//웹소켓
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	
-
 	/*
-	// Security
+	//security
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'org.springframework.security:spring-security-taglibs:6.3.1'
 	
-	// Validation
+	//validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.0'
 	
-	// Mail
+	//mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.3.1'
 	implementation 'com.sun.mail:jakarta.mail:2.0.1'
 	*/
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+
