--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -79,6 +79,7 @@ dependencies {
 	
 	
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
+	implementation 'org.springframework.security:spring-security-taglibs:6.3.1'
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.security:spring-security-crypto'
 	
