--- a/green-yummy-admin/src/main/resources/application.properties
+++ b/green-yummy-admin/src/main/resources/application.properties
@@ -19,3 +19,6 @@ logging.level.org.springframework=INFO
 logging.level.com.library=INFO
 logging.level.com.library.aspect.user=INFO
 logging.level.org.springframework.web=INFO
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
