--- a/green-yummy-admin/src/main/resources/application.properties
+++ b/green-yummy-admin/src/main/resources/application.properties
@@ -20,5 +20,6 @@ logging.level.com.library=INFO
 logging.level.com.library.aspect.user=INFO
 logging.level.org.springframework.web=INFO
 
+app.basepath=/src/main/resources/static
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
