--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -33,6 +33,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # 파일 업로드 저장 위치
 media.filepath=src/main/resources/static/upload
+app.basepath=/src/main/resources/static
 # 파일 업로드 최대 크기 (필요에 따라 조정)
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
