--- a/green-yummy/build.gradle
+++ b/green-yummy/build.gradle
@@ -93,6 +93,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// ocr
+	implementation 'net.sourceforge.tess4j:tess4j:5.12.0'
+	
 	
 	/*
 	//security
