--- a/green-yummy/src/main/resources/application.properties
+++ b/green-yummy/src/main/resources/application.properties
@@ -29,6 +29,9 @@ spring.jpa.open-in-view=false
 # 파일 업로드 저장 위치
 media.filepath=src/main/resources/static/upload
 app.basepath=/src/main/resources/static
+
+admin.media.filepath=../green-yummy-admin/src/main/resources/static/admin/images
+
 # 파일 업로드 최대 크기 (필요에 따라 조정)
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
